Testing scrolling issue on safari and iphone

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html {
     height: 100%;
     overflow-x: hidden; 
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 body {
     background-color: #0a192f;
@@ -34,10 +35,6 @@ p{
     word-wrap: break-word;
 }
 @media screen and (max-width: 480px){
-    html{
-        overflow-x: hidden; 
-        overflow-y: scroll;
-    }
     .title{
         font-size: 100%;
         margin-top: 5%;
@@ -56,10 +53,6 @@ p{
     }
 }
 @media screen and (max-width: 400px){
-    html{
-        overflow-x: hidden; 
-        overflow-y: scroll;
-    }
     .title{
         font-size: 80%;
         margin-top: 7%;
@@ -88,6 +81,11 @@ td{
     margin-left: 5%;
 }
 @media screen and (max-width: 860px){
+    html{
+        overflow-x: hidden; 
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+    }
     td,th{
         padding: 2px;
     }
